of: Add symbol generation to support dt-overlays on Hilscher netX4000 based platforms.

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -962,3 +962,8 @@ dtb-$(CONFIG_OF_ALL_DTBS) := $(patsubst $(dtstree)/%.dts,%.dtb, $(wildcard $(dts
 
 always		:= $(dtb-y)
 clean-files	:= *.dtb
+
+# Enable symbol generation to support dt-overlays on Hilscher netX4000 based platforms.
+ifeq ($(CONFIG_ARCH_NETX4000),y)
+	DTC_FLAGS ?= -@
+endif
